Added Specimen Filters to Other tables
