# api/openapi.yaml
@@ -23,6 +23,34 @@ paths:
           required: false
           schema:
             type: boolean
+        - name: person_id
+          in: query
+          description: The person_id that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: species_id
+          in: query
+          description: The specimen that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: gender_id
+          in: query
+          description: The gender that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: animalType_id
+          in: query
+          description: The animal type that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
         - name: destination_id
           in: query
           description: The destination that needs to be fetched.
@@ -30,6 +58,19 @@ paths:
           schema:
             type: integer
             minimum: 1
+        - name: age_id
+          in: query
+          description: The age that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: folio
+          in: query
+          description: The folio that needs to be fetched.
+          required: false
+          schema:
+            type: string
         - name: limit
           in: query
           description: The limit number of entries to be fetched.
@@ -287,6 +328,40 @@ paths:
       summary: Get All Destination Data
       description: Gets All Destination Data
       parameters:
+        - name: specimen_id
+          in: query
+          description: The specimen_id that needs to be fetched.
+          required: false
+          schema:
+            type: boolean
+        - name: person_id
+          in: query
+          description: The person_id that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: species_id
+          in: query
+          description: The specimen that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: gender_id
+          in: query
+          description: The gender that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: animalType_id
+          in: query
+          description: The animal type that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
         - name: destination_id
           in: query
           description: The destination that needs to be fetched.
@@ -294,6 +369,19 @@ paths:
           schema:
             type: integer
             minimum: 1
+        - name: age_id
+          in: query
+          description: The age that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: folio
+          in: query
+          description: The folio that needs to be fetched.
+          required: false
+          schema:
+            type: string
         - name: limit
           in: query
           description: The limit number of entries to be fetched.
@@ -595,13 +683,53 @@ paths:
       summary: Get All Reception Data
       description: Gets All Reception Data
       parameters:
-        - name: reciever_person_id
+        - name: specimen_id
           in: query
-          description: The reciever_person_id that needs to be fetched.
+          description: The specimen_id that needs to be fetched.
+          required: false
+          schema:
+            type: boolean
+        - name: person_id
+          in: query
+          description: The person_id that needs to be fetched.
           required: false
           schema:
             type: integer
             minimum: 1
+        - name: species_id
+          in: query
+          description: The specimen that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: gender_id
+          in: query
+          description: The gender that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: animalType_id
+          in: query
+          description: The animal type that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: age_id
+          in: query
+          description: The age that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: folio
+          in: query
+          description: The folio that needs to be fetched.
+          required: false
+          schema:
+            type: string
         - name: neighborhood_id
           in: query
           description: The neighborhood_id that needs to be fetched.
@@ -910,6 +1038,13 @@ paths:
       summary: Get All Specimen Data
       description: Gets All Specimen Data
       parameters:
+        - name: neighborhood_id
+          in: query
+          description: The neighborhood_id that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
         - name: person_id
           in: query
           description: The person_id that needs to be fetched.
@@ -927,6 +1062,20 @@ paths:
         - name: gender_id
           in: query
           description: The gender that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: animalType_id
+          in: query
+          description: The animal type that needs to be fetched.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: destination_id
+          in: query
+          description: The destination that needs to be fetched.
           required: false
           schema:
             type: integer
