# src/models/finalDestination.py
@@ -3,6 +3,8 @@ from __future__ import annotations
 from helpers.db import db
 from typing import List, Dict
 
+from models.reception import ReceptionModel
+
 
 class FinalDestinationModel(db.Model):
     __tablename__ = 'FinalDestinationData'
@@ -52,13 +54,29 @@ class FinalDestinationModel(db.Model):
         return cls.query.filter_by(specimen_id=specimen_id).first()
 
     @classmethod
-    def find_by_attributes(cls, limit: int = None, offset: int = None, destination_id: int = None, specimen_id: int = None) -> List:
+    def find_by_attributes(cls, limit: int = None, offset: int = None, destination_id: int = None, specimen_id: int = None,
+        person_id: int = None, animalType_id: int = None, species_id: int = None, gender_id: int = None, age_id: int = None, folio: str = None) -> List:
+
         finalDestination = cls.query
+        if person_id or animalType_id or species_id or gender_id or age_id or folio:
+            finalDestination = finalDestination.join(cls.specimen)
         if destination_id:
             finalDestination = finalDestination.filter_by(
                 destination_id=destination_id)
         if specimen_id:
             finalDestination = finalDestination.filter_by(specimen_id=specimen_id)
+        if person_id:
+            finalDestination = finalDestination.filter_by(person_id=person_id)
+        if animalType_id:
+            finalDestination = finalDestination.filter_by(animalType_id=animalType_id)
+        if species_id:
+            finalDestination = finalDestination.filter_by(species_id=species_id)
+        if gender_id:
+            finalDestination = finalDestination.filter_by(gender_id=gender_id)
+        if age_id:
+            finalDestination = finalDestination.filter_by(age_id=age_id)
+        if folio:
+            finalDestination = finalDestination.filter_by(folio=folio)
         if limit:
             finalDestination = finalDestination.limit(limit)
         if offset:
