# src/models/tracking.py
@@ -4,6 +4,8 @@ from helpers.db import db
 from typing import List, Dict
 import datetime
 
+from models.reception import ReceptionModel
+
 
 class TrackingModel(db.Model):
     __tablename__ = 'TrackingData'
@@ -56,14 +58,30 @@ class TrackingModel(db.Model):
         return cls.query.filter_by(specimen_id=specimen_id).first()
 
     @classmethod
-    def find_by_attributes(cls, limit: int = None, offset: int = None, destination_id: int = None, specimen_id: int = None, reviewed: bool = None) -> List:
+    def find_by_attributes(cls, limit: int = None, offset: int = None, destination_id: int = None, specimen_id: int = None, reviewed: bool = None,
+        person_id: int = None, animalType_id: int = None, species_id: int = None, gender_id: int = None, age_id: int = None, folio: str = None) -> List:
+
         tracking = cls.query
+        if person_id or animalType_id or species_id or gender_id or age_id or folio:
+            tracking = tracking.join(cls.specimen)
         if destination_id:
             tracking = tracking.filter_by(destination_id=destination_id)
         if specimen_id:
             tracking = tracking.filter_by(specimen_id=specimen_id)
         if reviewed:
             tracking = tracking.filter_by(reviewed=reviewed)
+        if person_id:
+            tracking = tracking.filter_by(person_id=person_id)
+        if animalType_id:
+            tracking = tracking.filter_by(animalType_id=animalType_id)
+        if species_id:
+            tracking = tracking.filter_by(species_id=species_id)
+        if gender_id:
+            tracking = tracking.filter_by(gender_id=gender_id)
+        if age_id:
+            tracking = tracking.filter_by(age_id=age_id)
+        if folio:
+            tracking = tracking.filter_by(folio=folio)
         if limit:
             tracking = tracking.limit(limit)
         if offset:
