# src/resources/finalDestination.py
@@ -95,7 +95,21 @@ class FinalDestinationList(Resource):
                             help='Offset of finalDestination to retrive', location='args')
     get_parser.add_argument('destination_id', type=int, required=False,
                             help='destination_id is an required param', location='args')
-
+    get_parser.add_argument('specimen_id', type=int, required=False,
+                            help='specimen_id is an required param', location='args')
+    get_parser.add_argument('person_id', type=int, required=False,
+                            help='person_id is an required param', location='args')
+    get_parser.add_argument('animalType_id', type=int, required=False,
+                            help='animalType_id is an required param', location='args')
+    get_parser.add_argument('species_id', type=int, required=False,
+                            help='species_id is an required param', location='args')
+    get_parser.add_argument('age_id', type=int, required=False,
+                            help='age_id is an required param', location='args')
+    get_parser.add_argument('folio', type=str, required=False,
+                            help='folio is an required param', location='args')
+    get_parser.add_argument('gender_id', type=int, required=False,
+                            help='gender_id is an required param', location='args')
+    
     def post(self):
 
         data = FinalDestinationList.post_parser.parse_args()
